--- a/src/main/resources/templates/auth/home.html
+++ b/src/main/resources/templates/auth/home.html
@@ -7,7 +7,7 @@
 <body>
 <nav th:replace="~{layout::menu}"></nav>
 <div>
-    <span class="p-2">Bienvenido(a): <span id="user_id" class="fw-bold"  th:text="${session.usuario}"></span></span>
+    <span class="p-2">Bienvenido(a): <span id="user_id" class="fw-bold"  th:text="${username}"></span></span>
 </div>
 </body>
 </html>
