--- a/src/main/resources/templates/auth/cambiarcontrasena.html
+++ b/src/main/resources/templates/auth/cambiarcontrasena.html
@@ -10,6 +10,7 @@
     <div class="card-header text-bg-dark mb-3">
         CAMBIA TU PASSWORD
     </div>
+    <div th:replace="~{layout::nombre}"></div>
     <div class="card-body">
         <form th:action="@{/auth/contrasenacambiada}" method="post">
             <div class="mb-3">
