--- a/src/main/resources/templates/auth/home.html
+++ b/src/main/resources/templates/auth/home.html
@@ -6,8 +6,6 @@
 </head>
 <body>
 <nav th:replace="~{layout::menu}"></nav>
-<div>
-    <span class="p-2">Bienvenido(a): <span id="user_id" class="fw-bold"  th:text="${username}"></span></span>
-</div>
+<div th:replace="~{layout::nombre}"></div>
 </body>
 </html>
